refactor: migrate String.format to String.formatted (Java 15+) (#1719)
* refactor: migrate String.format to String.formatted (Java 15+)

Motivation:
Java 15 introduced String.formatted() as an instance method counterpart
to String.format(), providing cleaner and more readable string formatting.

Modification:
Replace String.format("literal", args) with "literal".formatted(args)
across 14 files including elasticsearch, geode, google-cloud-bigquery,
hbase, kudu, mongodb, pravega, solr, spring-web, sqs, and sse modules.

Result:
More concise and idiomatic Java code leveraging Java 15+ API.

* style: apply javafmt to fix code style check failures

Apply javafmt to Java source files in elasticsearch and mongodb modules.